# you-will-pay

./: .gitignore  LICENSE  Makefile  README.md  bower.json  docker-compose.yml  package-lock.json  package.json  package.yaml  pay-not-think.cabal  you-will-pay.cabal
docker/ywp_db/: Dockerfile
docker/ywp_frontend/: Dockerfile
docker/ywp_nginx/: Dockerfile  nginx.conf
docker/ywp_server/: Dockerfile
docker/ywp_test_db/: Dockerfile
env/: local  test_remote_db
frontend/: bower.json  index.html  package-lock.json  package.json
frontend/resources/: browserconfig.xml
frontend/src/Api/: AddTransaction.purs  Response.purs
frontend/src/Components/AddTransactionForm/: AddTransactionForm.purs
frontend/src/Screens/Room/: Model.purs  Room.purs  Template.purs
frontend/src/UI/: Colors.purs  Counter.purs  Fonts.purs
frontend/src/Utils/: LocalStorage.purs  Parsers.purs
init_db/: init_local_db.sh  init_prod_db.sh
init_local_db/: create_data.sql  create_shape.sql  init_local_db.sh
resources/: manifest.json
server/: package.yaml
server/src/: Main.hs
server/src/Api/: AddTransaction.hs  RoomSummary.hs
server/src/Db/: Connection.hs  Inserters.hs  Selectors.hs
src/: Button.purs  Main.hs  Main.purs
src/Frontend/: Button.purs  Counter.purs  Main.purs  Types.purs
src/Frontend/Api/: AddTransaction.purs  GetSummary.purs  Response.purs
src/Frontend/Components/: Layout.purs  TransactionsList.purs
src/Frontend/Components/AddTransactionForm/: AddTransactionForm.purs  Model.purs  Template.purs
src/Frontend/Screens/: Room.purs
src/Frontend/Screens/Room/: Model.purs  Room.purs  Template.purs
src/Frontend/UI/: CSS.purs  Colors.purs  Counter.purs  Fonts.purs
src/Frontend/Utils/: Formatters.purs
src/Server/: Main.hs
src/Server/Api/: AddTransaction.hs  Api.hs  Response.hs  RoomSummary.hs
src/Server/Db/: Connection.hs  Inserters.hs  Selectors.hs  Types.hs
src/Server/View/: Main.hs
