name:                you-will-pay
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Nitive/you-will-pay#readme
license:             BSD3
license-file:        LICENSE
author:              Maxim Samoilov
maintainer:          nitive@icloud.com
copyright:           2017 Maxim Samoilov
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable you-will-pay
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , scotty >= 0.11 && < 0.12
                     , blaze-html >= 0.9.0.1 && < 0.10
