name:                you-will-pay
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Nitive/you-will-pay#readme
license:             BSD3
license-file:        LICENSE
author:              Maxim Samoilov
maintainer:          nitive@icloud.com
copyright:           2017 Maxim Samoilov
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable you-will-pay
  hs-source-dirs:      src/Server
  main-is:             Main.hs
  other-modules:       Db.Types
                     , Db.Connection
                     , Db.Selectors
                     , Db.Inserters
                     , Api.RoomSummary
                     , View.Main
                     , Api.AddTransaction
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , scotty >= 0.11 && < 0.12
                     , blaze-html >= 0.9.0.1 && < 0.10
                     , aeson >= 1.1.2 && < 1.2
                     , postgresql-simple >= 0.5.3 && < 0.6
                     , text >= 1.2 && < 1.3
                     , time >= 1.6 && < 1.7
